# back-to-the-basics

./: .gitignore  AGENT_PROMPT_TEMPLATE.txt  ARCHITECTS.md  CHANGELOG.md  CLAUDE.md  DATASET_CHEATSHEET.md  DATASET_FORMAT_SPEC.md  DATA_TRANSPARENCY_NOTICE.md  DECISION.md  DERIVE_IMPLEMENTATION_GUIDE.md  GROK_MISSION_BRIEF.md  INTEGRATION.md  LICENSE  MANIFESTO.md  MCP_TEST_RESULTS.md  README.md  THE_EVOLUTION.md  __init__.py  agent_memory_schema.py  ai_lab.py  benchmark.py  btb_mcp_server.py  btb_thresholds.yaml  cli.py  coherence.py  deep_network.py  derive.py  fractal.py  memory.py  memory_schema.json  pyproject.toml  reflex.py  requirements-benchmark.txt  sentinel.py  topology_prototype.py  visualizer.py
benchmarks/: BENCHMARKS.md  README.md  benchmark.py
docs/: AGENT_MEMORY.md  btb-infographic.html  slide1-title.html  slide2-problem.html  slide3-solution.html  slide4-circuit.html  slide5-topology.html  slide6-mei.html
examples/: README.md  agent_memory_routing.py  basic_usage.py  btb_multi_agent_swarm.py  claude_desktop_config.json  debugging_workflow.py  fractal_agent_hierarchy.py  mcp_client_config.json
examples/governed_derive/: README.md  demo.py
papers/: RESEARCH_SYNTHESIS.md  THE_THRESHOLD_PAUSE_v0.1.md  THE_THRESHOLD_PAUSE_v1.0.md  WHITEPAPER_ENHANCEMENT_GUIDE.md
swarm_brain/_intake/missing_metadata/unknown_2026-01-13T22:22:37.363263/: 20260113_222237_Proposed_refactor_for_Optimize.json
swarm_brain/_intake/missing_metadata/unknown_2026-01-13T22:22:37.366220/: 20260113_222237_Proposed_refactor_for_Optimize.json
swarm_brain/_intake/no_match/unknown_2026-01-13T22:22:37.363822/: 20260113_222237_Test_result__failure.json
swarm_brain/_intake/no_match/unknown_2026-01-13T22:22:37.366576/: 20260113_222237_Test_result__success.json
swarm_brain/outcome=learning/insight_type=pattern/: 20260113_222237_Reflected_on_failure__Previous.json
tests/: __init__.py  conftest.py  test_coherence.py  test_derive.py  test_mcp_server.py  test_memory.py  test_visualizer.py  test_with_threshold_protocols.py
