[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "back-to-the-basics"
version = "0.2.0"
description = "Filesystem-based agent memory using pure OS primitives. MCP server for BTB paradigm with schema discovery."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anthony J. Vasquez Sr."}
]
keywords = [
    "mcp",
    "agent-memory",
    "filesystem",
    "glob",
    "routing",
    "decision-tree",
    "data-engineering",
    "coherence",
    "btb",
    "schema-discovery"
]
dependencies = [
    "mcp>=0.1.0",
    "sympy>=1.12",  # For fractal routing tree modeling
    "scikit-learn>=1.3.0",  # For Ward linkage clustering in derive.py
    "numpy>=1.24.0",  # Required by scikit-learn
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
threshold = [
    "threshold-protocols>=0.2.0",  # Governance framework for autonomous BTB
]
mcp = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",  # For YAML config support
]
full = [
    "threshold-protocols>=0.2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/vaquez/back-to-the-basics"
Documentation = "https://github.com/vaquez/back-to-the-basics#readme"
Repository = "https://github.com/vaquez/back-to-the-basics"
Issues = "https://github.com/vaquez/back-to-the-basics/issues"

[project.scripts]
btb = "btb_mcp_server:main"

[tool.setuptools]
packages = ["back_to_the_basics"]
package-dir = {"back_to_the_basics" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
